--- a/eureka-server/src/main/resources/bootstrap.yml
+++ b/eureka-server/src/main/resources/bootstrap.yml
@@ -1,9 +1,25 @@
-server:
-  port: 8761
-
 spring:
   application:
     name: eureka-server
+
+server:
+  port: 8761
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+    health:
+      show-details: ALWAYS
+
+---
+
+spring:
+  profiles: standalone
 
 eureka:
   instance:
@@ -17,24 +33,11 @@ eureka:
             defaultZone: http://localhost:8761/eureka/
   server:
     enable-self-preservation: false
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    shutdown:
-      enabled: true
-    health:
-      show-details: ALWAYS
+
 ---
+
 spring:
   profiles: docker
-  application:
-    name: eureka-server
-
-server:
-  port: 8761
 
 eureka:
   instance:
@@ -49,13 +52,3 @@ eureka:
             defaultZone: http://eureka-server:8761/eureka/
   server:
     enable-self-preservation: false
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    shutdown:
-      enabled: true
-    health:
-      show-details: ALWAYS
