--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -8,6 +8,8 @@ spring:
   cloud:
     config:
       enabled: false
+    bus:
+      enabled: false
 
 springfox:
   documentation:
@@ -26,15 +28,15 @@ management:
     health:
       show-details: ALWAYS
 
+server:
+  port: 8080
+
 ---
 
 spring:
   profiles: standalone
   rabbitmq:
     host: localhost
-
-server:
-  port: 8080
 
 eureka:
   instance:
@@ -45,16 +47,12 @@ eureka:
     serviceUrl:
             defaultZone: http://localhost:8761/eureka/
 
-
 ---
 
 spring:
   profiles: docker
   rabbitmq:
     host: rabbitmq
-
-server:
-    port: 8080
 
 eureka:
   instance:
