--- a/zuul/src/main/resources/bootstrap.yml
+++ b/zuul/src/main/resources/bootstrap.yml
@@ -1,27 +1,33 @@
-server:
-  port: 8060
-
 spring:
   application:
     name: zuul
   sleuth:
-    sampler:
-      probability: 1
+    enabled: false
   zipkin:
-    sender:
-      type: web
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+    enabled: false
+  cloud:
+    bus:
+      enabled: false
+
+server:
+  port: 8060
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+    health:
+      show-details: ALWAYS
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 
 # Disable Hystrix timeout globally (for all services)
 #hystrix.command.default.execution.timeout.enabled: false
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+
 #hystrix.command.service-a.execution.timeout.enabled: false
 
 # Disable Hystrix timeout for a single service
@@ -33,35 +39,30 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 # Increase the Hystrix timeout to 60s (per service)
 #hystrix.command.<serviceName>.execution.isolation.thread.timeoutInMilliseconds: 60000
 
+---
+
+spring:
+   profiles: standalone
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+            defaultZone: http://localhost:8761/eureka/
+
 zuul:
   routes:
     user-service:
       path: /**
       serviceId: user-service
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    shutdown:
-      enabled: true
-    health:
-      show-details: ALWAYS
+
 ---
+
 spring:
   profiles: docker
-  application:
-    name: zuul
-  sleuth:
-    sampler:
-      probability: 1
-  zipkin:
-    base-url: http://zipkin:9411/
-    sender:
-      type: web
-server:
-  port: 8060
 
 eureka:
   instance:
@@ -73,21 +74,8 @@ eureka:
     serviceUrl:
             defaultZone: http://eureka-server:8761/eureka/
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
-
 zuul:
   routes:
     user-service:
-      path: /**
+      path: /users/**
       serviceId: user-service
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    shutdown:
-      enabled: true
-    health:
-      show-details: ALWAYS
