--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -7,12 +7,19 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-validation')
     compile('org.springframework.boot:spring-boot-starter-aop')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.retry:spring-retry')
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
     compile('org.springframework.cloud:spring-cloud-starter-zipkin')
     compile('de.codecentric:spring-boot-admin-starter-client:2.0.1')
     compile('org.springframework.boot:spring-boot-starter-security')
+
     compile('io.springfox:springfox-swagger2:2.6.1')
+    compile('io.springfox:springfox-swagger-ui:2.6.1')
+
+    compile('org.postgresql:postgresql:42.2.0')
+    compile("org.springframework:spring-jdbc:4.3.10.RELEASE")
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
