--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: user-service
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   sleuth:
     enabled: false
   zipkin:
@@ -35,24 +41,31 @@ server:
 
 spring:
   profiles: standalone
-  rabbitmq:
-    host: localhost
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres?ApplicationName=USER_SERVICE
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
 
 eureka:
-  instance:
-    hostname: localhost
+#  instance:
+#    hostname: localhost
   client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+    enabled: false
+#    registerWithEureka: true
+#    fetchRegistry: true
+#    serviceUrl:
+#            defaultZone: http://localhost:8761/eureka/
 
 ---
 
 spring:
   profiles: docker
-  rabbitmq:
-    host: rabbitmq
+  datasource:
+    url: jdbc:postgresql://db:5432/postgres?ApplicationName=USER_SERVICE
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
 
 eureka:
   instance:
